# leptos-tailwind-template

./: .gitignore  Cargo.toml  README.md  index.html
src/: app.rs  main.rs
